[Texmap] TextureMapperImageBuffer should not use rendering code for filters. https://bugs.webkit.org/show_bug.cgi?id=113040

Patch by No'am Rosenthal <noam@webkit.org> on 2013-03-22
Reviewed by Kenneth Rohde Christiansen.

Disable TextureMapperImageBuffer filters, until they can be done the right way.
This should only disrupt accelerated filters in fallback mode, which is a very rare
use case.

No new testable functionality.

* platform/graphics/texmap/TextureMapperImageBuffer.cpp:
(WebCore::BitmapTextureImageBuffer::applyFilters):

git-svn-id: svn://svn.chromium.org/blink/trunk@146590 bbb929c8-8fbe-4397-9dbb-9b2b20218538